learn recyclerview, viewmodel, and retrofit

--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -24,7 +24,7 @@
             android:id="@+id/newsImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:src="@tools:sample/avatars"
+            tools:src="@tools:sample/backgrounds/scenic"
             android:layout_gravity="center"
             />
 
