--- a/app/src/main/res/drawable/rounded_edge.xml
+++ b/app/src/main/res/drawable/rounded_edge.xml
@@ -1,7 +1,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#e2e8f0">
+        android:color="@color/white">
     </solid>
     <stroke
         android:width="0dp"
