implementing safe args to pass data between destinations with type safety

--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -22,8 +22,8 @@
 
         <ImageView
             android:id="@+id/newsImage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="100dp"
             tools:src="@tools:sample/backgrounds/scenic"
             android:layout_gravity="center"
             />
